[package]
name = "embedded-rust-stm"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
lto = false

[profile.release]
opt-level = "z"
lto = true

[dependencies]
cortex-m = "^0.7.3"
cortex-m-rt = "^0.7.3"
embedded-hal = "0.2.4"
panic-halt = "^0.2.0"

[dependencies.stm32f4xx-hal]
features = ["stm32f411"]
version = "0.20.0"