[package]
name = "multi-mission-library-rs"
version = "0.1.2"
description = "This crate is designed to hold composable, reusable driver code / wrappers for various sensors and hardware output devices. Currently it does not support differing STM32 models and only supports the STM32F4, however moving into the future that will be the plan."
license = "MIT"
edition = "2021"

[lib]
name = "multi_mission_library"
path = "src/lib.rs"

[profile.dev]
opt-level = 0
lto = false

[profile.release]
opt-level = "z"
lto = true

[dependencies]
cortex-m = "^0.7.3"
cortex-m-rt = "^0.7.3"
embedded-hal = "0.2.4"
panic-halt = "^0.2.0"
micromath = "2.1.0"
imu-fusion = "0.2.4"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
byteorder = { version = "1.5", default-features = false }

[dependencies.stm32f4xx-hal]
features = ["stm32f411", "usb_fs"]
version = "0.20.0"

[dependencies.heapless]
features = ["defmt-03"]
version = "0.8.0"
